# Hiterm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/rules/: macos.md
.github/: RELEASE_NOTES.md
.github/workflows/: ci.yml
assets/prompts/: ai_fix.txt  ai_generate.txt  prompt_suggestion.txt  summarize.txt  title.txt  webfetch_summarize.txt
assets/shell-integration/: check_config_version.sh  config_update_highlights.tsv  first_run.sh  hiterm.sh  install_cli_tools.sh  install_opencode_theme.sh  setup_fish.sh  setup_zsh.sh  state_common.sh
config/: AGENTS.md
config/derive/: Cargo.toml
config/src/: config.rs  keyassignment.rs  lib.rs  lua.rs  proxy.rs  version.rs
crates/bidi/: Cargo.toml
crates/color-types/: Cargo.toml
crates/filedescriptor/: Cargo.toml
crates/hiterm-ai-utils/: Cargo.toml
crates/hiterm-remote/: Cargo.toml
crates/hiterm-unicode-names/: Cargo.toml
crates/pty/: Cargo.toml
crates/tabout/: Cargo.toml
crates/vtparse/: Cargo.toml
docs/: configuration.md
hiterm/: Cargo.toml
hiterm-gui/: Cargo.toml
kaku/: Cargo.toml
kaku-gui/: Cargo.toml  build.rs
scripts/: bench_startup.sh  build.sh  check_config_release_readiness.sh  check_logs.sh  check_prompts.sh  check_release_config.sh  check_release_notes.sh  check_startup_budget.sh  download_vendor.sh  measure_startup_hiterm.sh  measure_startup_kaku.sh  nightly.sh  notarize.sh  prep_release.sh  release.sh  reset_first_run.sh  startup_budget.toml  test_webgpu_fallback.sh  update_helper.sh
term/: Cargo.toml
termwiz/: Cargo.toml
window/: Cargo.toml
(+183 files in other folders)
